--- a/app/views/landings/_search.html.haml
+++ b/app/views/landings/_search.html.haml
@@ -21,12 +21,4 @@
               %span{class:"input-group-btn"}
                 %a{href: "#", class:"btn btn-danger landing-submit", type:"submit"} SUBMIT
   .push
-.footer-dark
-  .container
-    We respect your privacy, we will never sell or share your information with anyone.
-    %br
-    Garry Rai Sales Representative, Century 21 Peoples Choice Realty Inc., Office: 9053668100, Direct: 4168066626
-    %br
-    = link_to "Privacy Policy", "#"
-    |
-    = link_to "Terms of Service", "#"
+= render "landing_footer"
