--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -3,29 +3,17 @@
 	<head>
 	  <title>Nicholas Alli</title>
 		<style>
-			.property-item {
-				width:200px;
-				border: 2px solid #ff6f20;
-				padding: 20px;
-				margin: 20px;
-				height: 225px;
-				color: #999;
-				display: inline-block;
+			body {
+				color: #213A64;
 			}
-			.property-item a {
-				text-align: center;
-				font-size:14px;
+			th {
+				font-weight: bold;
+				color: white;
+				background: #213A64;
+				padding:5px 10px;
 			}
-			.property-item img {
-				height: 100px;
-				margin-bottom:10px;
-			}
-			.pull-right {
-				float: right;
-			}
-			.clearfix {
-				clear:both;
-			}
+			tr:nth-child(odd) td {background: #CCC;padding:5px 10px;}
+			tr:nth-child(even) td {background: #FFF;padding:5px 10px;}
 		</style>
 	</head>
 	<body>
