--- a/app/views/listing_mailer/house_alert.html.erb
+++ b/app/views/listing_mailer/house_alert.html.erb
@@ -1,17 +1,45 @@
 <h2>Home Alerts</h2>
 <h4>Here's the list of newly added properties based on your settings</h4>
 <hr/><br/>
-<% @listings.each do |l| %>
-  <div class="property-item">
-    <center><img src="http://nicholasalli.s3.amazonaws.com/listing_photos/listing_<%= l.id %>_0.jpg"></center>
-    <center><%= link_to l.title, l %></center><br/><br/>
-    <strong>MLS&reg;</strong><span class="pull-right"><%= l.ml_num %></span>
-    <div class="clearfix"></div>
-    <strong>Price</strong><span class="pull-right"><%= number_to_currency(l.lp_dol) %></span>
-    <div class="clearfix"></div>
-    <strong>Bedrooms</strong><span class="pull-right"><%= l.br %></span>
-    <div class="clearfix"></div>
-    <strong>Bathrooms</strong><span class="pull-right"><%= l.bath_tot %></span>
-    <div class="clearfix"></div>
-  </div>
-<% end %>
+<table>
+  <thead>
+    <tr>
+      <th>
+        Title
+      </th>
+      <th>
+        MLS&reg;
+      </th>
+      <th>
+        Price
+      </th>
+      <th>
+        Bedrooms
+      </th>
+      <th>
+        Bathrooms
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @listings.each do |l| %>
+      <tr>
+        <td>
+          <%= link_to l.title, l %>
+        </td>
+        <td>
+          <%= l.ml_num %>
+        </td>
+        <td>
+          <%= number_to_currency(l.lp_dol, precision: 0) %>
+        </td>
+        <td>
+          <%= l.br %>
+        </td>
+        <td>
+          <%= l.bath_tot %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
