integrate cms with admin

--- a/app/assets/stylesheets/comfy/admin/cms/custom.sass
+++ b/app/assets/stylesheets/comfy/admin/cms/custom.sass
@@ -1,3 +1,16 @@
 // custom CSS for admin area
 .body-footer
-  display: none
+  a
+    width: 100%
+    img
+      width: 100%
+
+.admin_table
+  img
+    width: 200px
+
+.cms-logo
+  img
+    width: 90%
+    margin-left: 5%
+    margin-bottom: 25px
