--- a/app/views/admin/listings.html.erb
+++ b/app/views/admin/listings.html.erb
@@ -1,44 +1,41 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <h1 class="pull-left">Manage Listings (<%= @result_count %>)</h1>
-    </div>
-    <div class="col-md-4"><br/>
-      <%= form_tag admin_listings_path, method: :get, class: "form-inline" do %>
-        <div class="form-group">
-          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search" %>
-          <%= button_tag "Search", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
+<div class="row">
+  <div class="col-md-8">
+    <h1 class="pull-left">Manage Listings (<%= @result_count %>)</h1>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <%= will_paginate @listings %>
-      <table class="table table-striped admin_table">
-        <thead>
-          <tr>
-            <th width="15%"></th>
-            <th>Title</th>
-            <th style="text-align:right;">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @listings.each do |listing| %>
-            <tr>
-              <td width="15%"><img src="<%= listing.listing_images.first.try(:image_src) || '/missing-image.png' %>" onerror="this.onerror=null;this.src='/missing-image.png';"></td>
-              <td><%= listing.municipality %> <br><%= listing.addr %></td>
-              <td style="text-align:right;">
-                <%= link_to "View", listing_path(listing), target: "_blank" %>&nbsp;|&nbsp;
-                <%= link_to "Edit", admin_edit_listing_path(listing.id) %>&nbsp;|&nbsp;
-                <%= link_to "Delete", admin_delete_listing_path(listing), method: :delete, data: { confirm: "Are you sure?" } %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= will_paginate @listings %>
-    </div>
+  <div class="col-md-4"><br/>
+    <%= form_tag admin_listings_path, method: :get, class: "form-inline" do %>
+      <div class="form-group">
+        <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search" %>
+        <%= button_tag "Search", class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
 </div>
-<br/><br/>
+<div class="row">
+  <div class="col-md-12">
+    <%= will_paginate @listings %>
+    <table class="table table-striped admin_table">
+      <thead>
+        <tr>
+          <th width="15%"></th>
+          <th width="70%">Title</th>
+          <th style="text-align:right;"  width="15%">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @listings.each do |listing| %>
+          <tr>
+            <td width="15%"><img src="<%= listing.listing_images.first.try(:image_src) || '/missing-image.png' %>" onerror="this.onerror=null;this.src='/missing-image.png';"></td>
+            <td width="70%"><%= listing.municipality %> <br><%= listing.addr %></td>
+            <td style="text-align:right;" width="15%">
+              <%= link_to "View", listing_path(listing), target: "_blank" %>&nbsp;|&nbsp;
+              <%= link_to "Edit", admin_edit_listing_path(listing.id) %>&nbsp;|&nbsp;
+              <%= link_to "Delete", admin_delete_listing_path(listing), method: :delete, data: { confirm: "Are you sure?" } %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= will_paginate @listings %>
+  </div>
+</div>
