street match auto creationg

--- a/app/views/landings/_street_watch.html.haml
+++ b/app/views/landings/_street_watch.html.haml
@@ -82,17 +82,13 @@
                       .form-group
                         %label Radius
                         %select.form-control{name: "radius"}
-                          %option{value:"200"} 200 Meters
-                          %option{value:"250"} 250 Meters
-                          %option{value:"300"} 300 Meters
-                          %option{value:"350"} 350 Meters
-                          %option{value:"400"} 400 Meters
                           %option{value:"500"} 500 Meters
-                          %option{value:"600"} 600 Meters
-                          %option{value:"700"} 700 Meters
-                          %option{value:"800"} 800 Meters
-                          %option{value:"900"} 900 Meters
-                          %option{value:"1000"} 1000 Meters
+                          %option{value:"1000"} 1 km
+                          %option{value:"2000"} 2 km
+                          %option{value:"5000"} 5 km
+                          %option{value:"10000"} 10 km
+                          %option{value:"15000"} 15 km
+                          %option{value:"20000"} 20 km
                       .form-group
                         %label First and Last name
                         %input.form-control{placeholder: "Enter First and Last name", type: "text", name: "full_name", required: ""}
