--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -255,6 +255,8 @@ header .navbar-custom .dropdown-menu li:hover a {
 header .navbar-custom .navbar-collapse {
 	padding: 0;
 	border: none !important;
+  position: relative;
+  z-index:1000;
 }
 header .navbar-custom .navbar-collapse,
 header .navbar-custom .navbar-form {
