--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <%= display_meta_tags site: 'Nicholas Alli' %>
     <link rel="shortcut icon" href="">
 
     <title><%= @page_title || "Nicholas Alli" %></title>
