--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,12 +15,10 @@
 		<div class="links">
 			<div class="container">
 				<ul>
-					<li><a href="/about">About</a></li>
-					<li><a href="/sellers">Sellers</a></li>
-					<li><a href="/buyers">Buyers</a></li>
-					<li><a href="/terms">Terms & Conditions</a></li>
-					<li><a href="<%= SiteConfiguration.first.try(:blog_url) %>">Blog</a></li>
-					<li><a href="/contact">Contact</a></li>
+					<% l = MenuLocation.where(name: "Footer").first %>
+					<% l.menu_items.each do |m| %>
+						<li><%= link_to m.title, m.url %></li>
+					<% end if l %>
 				</ul>
 			</div>
 		</div>
