--- a/app/views/layouts/comfy/admin/cms/_left.html.haml
+++ b/app/views/layouts/comfy/admin/cms/_left.html.haml
@@ -2,20 +2,18 @@
 = render 'comfy/admin/cms/partials/navigation_before'
 %ul.navigation
   - if @site && !@site.new_record?
-    -# %li= active_link_to t('comfy.admin.cms.base.layouts'), comfy_admin_cms_site_layouts_path(@site)
+    %li= active_link_to "Existing Listings", admin_listings_path
+    %li= active_link_to "New Listing", admin_new_listing_path
+    %li= active_link_to "Blog", admin_blog_path
     %li= active_link_to t('comfy.admin.cms.base.pages'), comfy_admin_cms_site_pages_path(@site)
     %li
       - unless is_active_link?(comfy_admin_cms_site_files_path(@site))
         %a.cms-files-open-modal{:href => '#', :title => 'Open library'}
           %span.glyphicon.glyphicon-th-list
       = active_link_to t('comfy.admin.cms.base.files'), comfy_admin_cms_site_files_path(@site)
-
-    %li= active_link_to "Existing Listings", admin_listings_path
-    %li= active_link_to "New Listing", admin_new_listing_path
     %li= active_link_to "Manage Access", admin_user_management_path
     %li= active_link_to "Configurations", admin_configurations_path
-    %li= active_link_to "Blog", admin_blog_path
-
+    %li= active_link_to "Navigation", admin_menu_path
   = cms_hook :navigation
 
   = render 'comfy/admin/cms/partials/navigation_inner'
