street view and search fix

--- a/app/views/home/_info_content.html.erb
+++ b/app/views/home/_info_content.html.erb
@@ -20,7 +20,9 @@
 						<input name="autocomplete_form" type="hidden" value="true">
 						<input name="route" type="hidden" value="">
 						<input name="locality" type="hidden" value="">
-						<input name="administrative_area_level_1" type="hidden" value="">
+						<input name="administrative_area_level_1" type="hidden" value="">						
+						<input name="lat" type="hidden" value="">
+						<input name="lng" type="hidden" value="">
 						<span class="input-group-btn">
 							<button type="submit" class="btn">Search</button>
 						</span>
