--- a/app/views/landings/_search.html.haml
+++ b/app/views/landings/_search.html.haml
@@ -18,6 +18,8 @@
               %input{name: "route", type:"hidden", value:""}
               %input{name: "locality", type:"hidden", value:""}
               %input{name: "administrative_area_level_1", type:"hidden", value:""}
+              %input{name: "lat", type:"hidden", value:""}
+              %input{name: "lng", type:"hidden", value:""}
               %span{class:"input-group-btn"}
                 %a{href: "#", class:"btn btn-danger landing-submit", type:"submit"} SUBMIT
   .push
