--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -70,6 +70,8 @@
                 <input name="route" type="hidden" value="">
                 <input name="locality" type="hidden" value="">
                 <input name="administrative_area_level_1" type="hidden" value="">
+                <input name="lat" type="hidden" value="">
+                <input name="lng" type="hidden" value="">
               </div>
 							<hr>
               <div class="box-grey">
