--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -22,6 +22,8 @@
               <input name="route" type="hidden" value="">
               <input name="locality" type="hidden" value="">
               <input name="administrative_area_level_1" type="hidden" value="">
+              <input name="lat" type="hidden" value="">
+              <input name="lng" type="hidden" value="">
               <span class="input-group-btn">
                 <button type="submit" class="btn">Search</button>
               </span>
@@ -62,6 +64,8 @@
                 <input name="autocomplete_form" type="hidden" value="true" ng-model="search_filters.autocomplete_form" ng-init="search_filters.autocomplete_form = true">
                 <input name="route" type="hidden" value="<%= params[:route] %>" ng-model="search_filters.route" ng-init="search_filters.route = '<%= params[:route] %>'" id="refine-route">
                 <input name="locality" type="hidden" value="<%= params[:locality] %>" ng-model="search_filters.locality" ng-init="search_filters.locality = '<%= params[:locality] %>'" id="refine-locality">
+                <input name="lat" type="hidden" value="<%= params[:lat] %>" ng-model="search_filters.lat" ng-init="search_filters.lat = '<%= params[:lat] %>'" id="refine-lat">
+                <input name="lng" type="hidden" value="<%= params[:lng] %>" ng-model="search_filters.lng" ng-init="search_filters.lng = '<%= params[:lng] %>'" id="refine-lng">
                 <input name="administrative_area_level_1" type="hidden" value="<%= params[:administrative_area_level_1] %>" ng-model="search_filters.administrative_area_level_1" ng-init="search_filters.administrative_area_level_1 = '<%= params[:administrative_area_level_1] %>'" id="refine-administrative_area_level_1">
                 <div class="form-group">
                   <%= select_tag 'custom_search[type_own1_out]', options_for_select([["Detached Homes", "Detached"], ["Semi-detached Homes", "Semi-Detached"], ["Multiplexes", "Multiplex"], ["Townhouses", "Att/Row/Twnhouse"], ["Cottages", "Cottage"], ["Condos", "Condo Apt"], ["Farms", "Farm"]], params[:custom_search].try(:[], :type_own1_out)), class: "form-control", include_blank: "All Property Types", "ng-model" => "search_filters.custom_search.type_own1_out", "ng-init" => "search_filters.custom_search.type_own1_out = '#{params[:custom_search].try(:[], :type_own1_out)}'" %>
