--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,91 +1,89 @@
 <section id="about" class="section">
   <div class="container">
     <div class="text-center">
-      <p class="top">THE ICE CONDO BUILDINGS</p>
+      <br>
+      <p class="top letter-spaced">MARTIN ZIELINSKI</p>
     </div>
-    <%= image_tag "captions/about.png", class: "header" %>
+    <h1 class="page_title">YOUR LOCAL REAL ESTATE ADVISOR</h1>
 
     <div class="subnav">
     </div>
-
-    <div class="about">
-      <div class="col-md-5">
-        <%= image_tag "about1.jpg", class: "img-responsive" %>
+  </div>
+  <div class="row">
+    <div class="col-md-12 about-row-1">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1">
+            <span class="gold">OUR GOAL IS TO PROVIDE YOU WITH PERSONAL AND COMPREHENSIVE SERVICES WHEN PURCHASING YOUR NEW HOME.</span>
+          </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1">
+            <p class="about-content">
+              “Congratulations on your decision to move to the Greater Toronto Area. It is a friendly community with an affordable standard of living and reasonably priced housing. You will also appreciate the diverse cosmopolitan opportunities you would typically find in a much larger metropolitan areas of the world”
+            </p>
+          </div>
+          <div class="col-md-4 col-md-offset-1">
+            <span style="font-size:16px;">MARTIN IS COMMITTED TO:</span><br>
+            <hr style="border-color: #333;">
+            <br>
+            <ul class="about-list">
+              <li>Providing dedicated, personal service to all his clients</li>
+              <li>Being flexible and available at all times</li>
+              <li>Providing professional and ethical service</li>
+              <li>Listening to client needs and developing innovative strategies to address them</li>
+              <li>Providing constant feedback to keep clients well informed</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1">
+            <%= image_tag "about-img-1.png", class: "img-responsive" %>
+          </div>
+        </div>
+        <br><br><br>
       </div>
-      <div class="col-md-6 col-md-offset-1">
-        <ul class="list-unstyled">
-          <li><span class="gold">ADDRESS:</span> YORK AND BREMNER, TORONTO</li>
-          <li><span class="gold">DEVELOPER:</span> LANTERRA DEVELOPMENTS, CADILLAC FAIRVIEW</li>
-          <li><span class="gold">ARCHITECT:</span> ARCHITECTSALLIANCE</li>
-          <li><span class="gold">INTERIOR DESIGNER:</span> STUDIO MUNGE</li>
-          <li><span class="gold">LANDSCAPE ARCHITECT:</span> NAK DESIGN STRATEGIES</li>
-          <li><span class="gold">CATEGORY:</span> CONDO</li>
-          <li><span class="gold">HEIGHT:</span> 768 FT</li>
-          <li><span class="gold">STOREYS:</span> 67</li>
-          <li><span class="gold">NUMBER OF UNITS:</span> 743</li>
-          <li><span class="gold">HEIGHT:</span> 610FT</li>
-          <li><span class="gold">SMALLEST SUITE:</span> 402 SQ FT</li>
-          <li><span class="gold">LARGEST SUITE:</span> 1300 SQ FT</li>
-        </ul>
-      </div>
-    </div>
-    <div class="about" style="padding: 40px 0;">
-      <div class="col-md-6">
-        <h3>
-          ICE IS A WAY OF LIFE, IT IS AT ONCE URBAN AND CLOSE TO NATURE, INSPIRED BY ARCHITECTURE THAT WHISPERS
-          TIMELESS SIMPLICITY THROUGH CLEAN ELEGANT LINES.
-        </h3>
-
-        <div class="line"></div>
-
-        <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-          timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-          Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-          of Canada’s largest metropolis. ICE offers a green roof that will impact the Toronto skyline with lush,
-          oxygen creating landscaping, while creating a canopy of organic shelter over the bustling plaza below. ICE
-          is a condominium living that melds its contemporary design with trendsetting lifestyle amenities in
-          Toronto’s premiere waterfront location. ICE is prime real estate, sculpted for urban purchasers.</p>
-      </div>
-      <div class="col-md-5 col-md-offset-1">
-        <%= image_tag "about2.jpg", class: "img-responsive" %>
-      </div>
-    </div>
-    <%= image_tag "captions/design.png", class: "header vspace" %>
-
-    <div class="about">
-      <div class="col-md-5">
-        <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-          timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-          Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-          of Canada’s largest metropolis.</p>
-
-        <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-          timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-          Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-          of Canada’s largest metropolis.</p>
-
-        <p>Ice is a way of life, it is at once urban and close to nature, inspired by architecture that whispers
-          timeless simplicity through clean elegant lines. ICE is tall, sleek and ultimately cool. ICE is
-          Scandinavian-inspired design emerging as a gleaming amalgam of glass and metal from the concrete labyrinth
-          of Canada’s largest metropolis.</p>
-      </div>
-      <div class="col-md-6 col-md-offset-1">
-        <h3>ICE IS A COLLABORATION OF SOME OF THE FINEST MINDS AND BRIGHTEST TALENTS OF THE DAY. IN SEARCH FOR THE
-          NEWEST CONDS OF CLASSIC SCANDINAVIAN DESIGN THE ICE TEAM TRAVELED TO SWEDEN AND NORWAY IN THE SPRING OF
-          2008.</h3>
-
-        <div class="line"></div>
-      </div>
-      <div class="col-md-5 col-md-offset-2">
-        <%= image_tag "about2.jpg", class: "img-responsive vspace" %>
-      </div>
-    </div>
-
-    <div class="row">
-      <hr class="gold vspace">
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12 about-row-2">
+      <div class="container">
+        <div class="text-center">
+          <br><br><br><br>
+          <p class="top letter-spaced">REAL ESTATE TECH BROKERAGE</p>
+        </div>
+        <h1 class="page_title">CLOUDREALTY</h1>
 
+        <div class="subnav">
+        </div><br>
+        <center><%= image_tag "cloud-icon.png" %></center>
+        <br><br>
+        <p class="gold text-center">
+          ICE IS A COLLABORATION OF SOME OF THE FINEST MINDS AND BRIGHTEST TALENTS OF THE DAY.
+        </p>
+        <div class="row about-content">
+          <div class="col-md-6">
+            <p>
+              Cloud Realty was built from the ground up to address a tremendous technology void in the real estate market, whereas many of the traditional real estate brokerages are constantly fighting to integrate new technologies with old systems. Our belief is that consumers and real estate professionals demand a brokerage that is actively shaping the real estate landscape through the development of innovative ideas and trend-setting business philosophies.
+            </p>
+          </div>
+          <div class="col-md-6">
+            <p>
+              Having better trained agents, allows our clients to achieve their real estate goals faster. By harnessing the power of the Internet we are able to connect buyers and sellers in ways no other brokerages can. Despite the obvious advantages technology brings to real estate, we know one simple fact to be true -  real estate is and always will be a people business.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <%= link_to "VISIT CLOUDREALTY.CA", "http://cloudrealty.ca", target: "_blank", class: "gold" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br><br>
   <div class="row hidden-xs logos">
     <div class="col-sm-6">
       <%= image_tag "footer-left.png", width: "207", height: "56" %>
@@ -98,4 +96,4 @@
   <div style="position: relative; top: -56px;">
     <a href="#page-top" class="center-block page-scroll" style="width: 50px"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
   </div>
-</section>
+</div>
