--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -49,8 +49,8 @@
           <div class="col-lg-5 text-right-lg">
             <h2 class="gold price">{{o_listing.lp_dol ? (o_listing.lp_dol | currency : "$CAD ").slice(0, -3) : "--"}}</h2>
 
-            <div class="text-xsmall vspace">Ice is a way of life, it is at once urban and cl</div>
-            <a class="btn btn-gold">More Information</a>
+            <div class="text-xsmall vspace">Ice is a way of life, it is at once urban and classic</div>
+            <a class="btn btn-gold" href="/listings/{{o_listing.id}}">More Information</a>
           </div>
         </div>
         <hr>
